Add function arity tracking and fix LSP semantic tokens
- Add param_count to ProgramData for function arity
- Fix semantic token encoding to use 0-indexed positions
- Fix local variable spans in parser (use actual token spans)
- Track LocalRef in analyzer for proper reference highlighting
- Add FOR loop variable recognition with correct spans
- Fix arity detection to use outermost local binding only
- Fix STO reference spans to use name location
- Add VS Code command to restart language server
- Add comprehensive analysis tests for quicksort fixture

--- a/editors/vscode/package.json
+++ b/editors/vscode/package.json
@@ -65,6 +65,12 @@
         }
       ]
     }],
+    "commands": [
+      {
+        "command": "rpl.restartServer",
+        "title": "RPL: Restart Language Server"
+      }
+    ],
     "configuration": {
       "properties": {
         "rpl.server.path": {
