--- a/editors/vscode/package.json
+++ b/editors/vscode/package.json
@@ -8,16 +8,31 @@
   "main": "./extension.js",
   "activationEvents": ["onLanguage:rpl", "onDebug"],
   "contributes": {
-    "languages": [{
-      "id": "rpl",
-      "extensions": [".rpl"],
-      "configuration": "./language-configuration.json"
-    }],
-    "grammars": [{
-      "language": "rpl",
-      "scopeName": "source.rpl",
-      "path": "./rpl.tmLanguage.json"
-    }],
+    "languages": [
+      {
+        "id": "rpl",
+        "extensions": [".rpl"],
+        "configuration": "./language-configuration.json"
+      },
+      {
+        "id": "rpli",
+        "aliases": ["RPL Interface", "rpli"],
+        "extensions": [".rpli"],
+        "configuration": "./language-configuration.json"
+      }
+    ],
+    "grammars": [
+      {
+        "language": "rpl",
+        "scopeName": "source.rpl",
+        "path": "./rpl.tmLanguage.json"
+      },
+      {
+        "language": "rpli",
+        "scopeName": "source.rpli",
+        "path": "./rpli.tmLanguage.json"
+      }
+    ],
     "breakpoints": [
       { "language": "rpl" }
     ],
