Move rpl binary to rpl-stdlib

--- a/crates/rpl-stdlib/Cargo.toml
+++ b/crates/rpl-stdlib/Cargo.toml
@@ -6,5 +6,9 @@ edition.workspace = true
 [lints]
 workspace = true
 
+[[bin]]
+name = "rpl"
+path = "bin/rpl.rs"
+
 [dependencies]
 rpl = { workspace = true }
