--- a/crates/rpl-lsp/Cargo.toml
+++ b/crates/rpl-lsp/Cargo.toml
@@ -12,6 +12,7 @@ path = "src/lib.rs"
 
 [dependencies]
 rpl = { path = "../rpl" }
+rpl-stdlib = { path = "../rpl-stdlib" }
 lsp-types = "0.97"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
