Factor out rpl-vm crate and add DebugState toggle

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 resolver = "2"
-members = ["crates/rpl-lsp", "crates/rpl-dap", "crates/rpl-tui", "crates/rpl-plot", "crates/rpl-sr5", "crates/rpl", "crates/rpl-stdlib"]
-default-members = [".", "crates/rpl-tui", "crates/rpl-lsp", "crates/rpl-dap", "crates/rpl-sr5", "crates/rpl-plot", "crates/rpl", "crates/rpl-stdlib"]
+members = ["crates/rpl-lsp", "crates/rpl-dap", "crates/rpl-tui", "crates/rpl-plot", "crates/rpl-sr5", "crates/rpl", "crates/rpl-stdlib", "crates/rpl-vm"]
+default-members = [".", "crates/rpl-tui", "crates/rpl-lsp", "crates/rpl-dap", "crates/rpl-sr5", "crates/rpl-plot", "crates/rpl", "crates/rpl-stdlib", "crates/rpl-vm"]
 
     [workspace.package]
     version = "0.1.0"
@@ -19,6 +19,7 @@ default-members = [".", "crates/rpl-tui", "crates/rpl-lsp", "crates/rpl-dap", "c
     rpl-sr5 = {path = "crates/rpl-sr5"}
     rpl = {path = "crates/rpl"}
     rpl-stdlib = {path = "crates/rpl-stdlib"}
+    rpl-vm = {path = "crates/rpl-vm"}
 
     # External dependencies
     smallvec = "1"
