--- a/crates/rpl-tui/Cargo.toml
+++ b/crates/rpl-tui/Cargo.toml
@@ -12,7 +12,7 @@ path = "src/lib.rs"
 
 [dependencies]
 rpl = { path = "../rpl" }
-rpl-plot = { path = "../rpl-plot" }
+rpl-vector-plot = { path = "../rpl-vector-plot" }
 ratatui = "0.30.0-beta.0"
 crossterm = "0.28"
 dirs = "5"
