--- a/crates/rpl-lsp/Cargo.toml
+++ b/crates/rpl-lsp/Cargo.toml
@@ -13,7 +13,9 @@ path = "src/lib.rs"
 [dependencies]
 rpl = { path = "../rpl" }
 rpl-stdlib = { path = "../rpl-stdlib" }
+rpl-project = { path = "../rpl-project" }
 lsp-types = "0.97"
+url = "2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 log = "0.4"
